2004-09-14  Sebastien Pouliot  <sebastien@ximian.com>

	* DbDataPermission.cs: Implemented Intersect, IsSubsetOf and Union.
	Implementation isn't complete as the restrictions seems to change the
	expected results (breaking some rules like x.IsSubsetOf (x) == false).
	Better (real-world) tests cases are required.
	* PermissionHelper.cs: Fixed small differences between System.Data.dll 
	validations wrt to mscorlib.dll (XML and PermissionState).

2004-09-13  Sebastien Pouliot  <sebastien@ximian.com>

	* DbConnectionOptions.cs: New class for Fx 2.0. Partial implementation
	to support new methods in DBDataPermission.
	* DbConnectionString.cs: Updated class to split from/inherit 
	DbConnectionOptions class.
	* DbDataPermission.cs: Implemented Add, Clear, Copy, ToXml methods and
	completed constructors.
	* DbDataPermissionAttribute.cs: Completed/fixed class.
	* PermissionHelper.cs: Helper methods to create permission classes.

2004-08-31 Francisco Figueiredo Jr. <fxjrlists@yahoo.com.br>
	* DbDataAdapter.cs: Fix for out of memory exceptions when trying to fill a dataset with a query which doesn't return a resultset like insert, delete or update.

2004-07-21 Umadevi S <sumadevi@novell.com>
	* DbDataRecord.cs - Fix for bug 58163. Return DBNull instead of null

2004-07-07 Umadevi S <sumadevi@novell.com>
	* DataContainer.cs :CheckedforNull before calling the relavant setmethods in each of the
                SetItemForDataRecord method for the DateTimeClass


2004-06-24  Atsushi Enomoto  <atsushi@ximian.com>

	* DataColumnMappingCollection.cs : fixed typo.
	* DbDataAdapter.cs : column mappings were not filled.

2004-06-24  Atsushi Enomoto  <atsushi@ximian.com>

	* DataTableMapping.cs : Clone() should also clone ColumnMappings.

2004-06-18 Umadevi S <sumadevi@novell.com>
	* DataContainer.cs - CheckedforNull before calling the relavant setmethods in each of the 
		SetItemForDataRecord method for all the classes.

2004-06-17  Boris Kirzner  <borisk@mainsoft.com>