@@ -2,6 +2,7 @@
 // System.Data.Common.DbProviderFactoriesConfigurationHandler.cs
 //
 // Author:
+//   Sureshkumar T (tsureshkumar@novell.com)
 //   Tim Coleman (tim@timcoleman.com)
 //
 // Copyright (C) Tim Coleman, 2003
@@ -32,8 +33,10 @@
 
 #if NET_2_0
 
-using System.Configuration;
+using System.IO;
 using System.Xml;
+using System.Globalization;
+using System.Configuration;
 
 namespace System.Data.Common {
 	public class DbProviderFactoriesConfigurationHandler : IConfigurationSectionHandler
@@ -52,8 +55,87 @@ namespace System.Data.Common {
 		[MonoTODO]
 		public virtual object Create (object parent, object configContext, XmlNode section)
 		{
-			throw new NotImplementedException ();
+                        DataSet ds = new DataSet ("DbProviderFactories");
+                        CreateDataTables (ds, section);
+                        return ds;
 		}
+
+                internal virtual void CreateDataTables (DataSet ds, XmlNode section) 
+                {                        
+                        DataTable dt = ds.Tables.Add ("DbProviderFactories");
+                        DataColumn [] columns = new DataColumn [5];
+                        columns [0] = new DataColumn ("Name", typeof (string));
+                        columns [1] = new DataColumn ("Description", typeof (string));
+                        columns [2] = new DataColumn ("InvariantName", typeof (string));
+                        columns [3] = new DataColumn ("AssemblyQualifiedName", typeof (string));
+                        columns [4] = new DataColumn ("SupportedClasses", typeof (int));
+                        dt.Columns.AddRange (columns);
+                        dt.PrimaryKey = new DataColumn [] {columns [2]};
+                                
+                        foreach (XmlNode node in section.SelectNodes (".//DbProviderFactories")) {
+                                AddRows (dt, node);
+                                RemoveRows (dt, node);
+                       }
+                }
+
+                internal string GetAttributeValue (XmlNode node, string name)
+                {
+                        XmlAttribute attr = node.Attributes[name];
+                        if (attr == null)
+                                throw new ConfigurationException ("Required Attribute '" + name +
+                                                                  "' is  missing!", node);
+                        string value = attr.Value;
+                        if (value == "")
+                                throw new ConfigurationException ("Attribute '" + name + "' cannot be empty!",
+                                                                  node);
+                        return value;
+                }
+
+                internal virtual void AddRows (DataTable dt, XmlNode factoriesNode)
+                {
+                        foreach (XmlNode addNode in factoriesNode.SelectNodes (".//add")) {
+                                if (addNode.NodeType != XmlNodeType.Element)
+                                        continue;
+                                
+                                string name = "";
+                                string description = "";
+                                string invariant = "";
+                                string type = "";
+                                string supportedClasses = "";
+                                int support;
+
+                                name            = GetAttributeValue (addNode, "name");
+                                description     = GetAttributeValue (addNode, "description");
+                                invariant       = GetAttributeValue (addNode, "invariant");
+                                type            = GetAttributeValue (addNode, "type");
+                                supportedClasses = GetAttributeValue (addNode, "support");
+                                
+                                support = int.Parse (supportedClasses, NumberStyles.HexNumber);
+                                        
+                                DataRow row = dt.NewRow ();
+                                row [0] = name;
+                                row [1] = description;
+                                row [2] = invariant;
+                                row [3] = type;
+                                row [4] = support;
+                                        
+                                dt.Rows.Add (row);
+                        }        
+                }
+
+                internal virtual void RemoveRows (DataTable dt, XmlNode removeNode)
+                {
+                        foreach (XmlNode node in removeNode.SelectNodes (".//remove")) {
+                                if (node.NodeType != XmlNodeType.Element)
+                                        continue;
+                                
+                                string invariant = GetAttributeValue (node, "invariant");
+                                DataRow row = dt.Rows.Find (invariant);
+                                if (row != null)
+                                        row.Delete ();
+                        }
+                }
+                
 
 		#endregion // Methods
 	}
